solc_ossfuzz_seed_corpus/test_sol/test_ca9a50d43f84eccbb90085afbf50e1e7c391503d82fc59f089cb0996f0d48777_7c76121ecd8102525453004f3b70cf1fe706e259_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0() external    returns(function (bool, string memory) external   o0,uint176 o1,bytes memory o2)
  {
  }
  event ev0();
  function f1(address i0,bytes4 i1) public   
  {
  }
  event ev1();
  event ev2(bytes17  ep0, function (int72, int24, int96) external   returns (bool, uint192, function () internal  )[]  ep1, function (bytes9, uint96) external    ep2);
  type T0 is bool;
  event ev3(bool  ep0, uint192  ep1);
}
using L0 for uint;
function f2(bool[] memory i0,bool i1)    
{
}
using L0 for uint;
using L0 for uint;
using L0 for uint;
using L0 for uint;
pragma solidity >= 0.0.0;
using L0 for uint;
// ----
// TypeError 2582: (su0.sol:306-329): Internal type cannot be used for external function type.
